--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ div{
     background: hsl(0, 0%, 100%);
     text-align: center;
     font-weight: 400;
+    box-shadow: 0px 0px 15px rgb(204, 204, 204);
 }
 
 div img{
